--- a/design.css
+++ b/design.css
@@ -3,3 +3,29 @@
 body{
     background-color: aqua;
 }
+
+
+h1{
+    color:blue;
+    font-size:1rem;
+}
+
+div{
+    
+    color: beige;
+    width:20vw;
+    height:20vw;
+
+}
+.box1{
+    background-color:black;
+}
+.box2{
+    background-color:#a02121;
+}
+.box3{
+    background-color:green;
+}
+
+
+
